Mon Nov 20 14:22:40 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* postlist.h now declares class OmKey - was failing to declare before
	  use, causing a compiler error (but only with
	  --disable-pthread-support)

Mon Nov 20 14:20:20 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove a compiler warning in quartz_database.cc

Mon Nov 20 14:13:31 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Simple bugfix to ombatchenquire.cc so that it compiles when
	  --disable-phread-support is specified.

Mon Nov 20 12:56:56 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed mentions of termids from Quartz.

Fri Nov 17 19:00:23 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed uneeded macro from quartz_types.h

Fri Nov 17 18:24:29 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Bcursor is now closer to a proper class.  Bcursor_* functions
	  are now just wrappers.  Implementation moved to bcursor.cc

	* Some of the macros, helper functions, and types from btree.cc
	  have moved into separate header files.
	
Fri Nov 17 16:43:50 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.4.0

Fri Nov 17 16:26:52 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Annihilated a small memory leak.

	* Fixed a problem with checking enable_shared.

Fri Nov 17 16:12:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove tests to check for Berkeley DB 3.1 - we don't use Berkeley
	  DB 3.1.

	* Made quartz compile by default - it now passes the testsuite (well,
	  apart from a small memory leak, but what's a small memory leak
	  between friends?).

Fri Nov 17 15:49:20 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change an OmUnimplementedError into an OmInvalidOperationError
	  in MSetPostList

Fri Nov 17 15:39:29 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
