@@ -32,8 +32,6 @@ fi
 cflags=false
 libs=false
 
-lib_gtk=yes
-
 while test $# -gt 0; do
     case "$1" in
     -*=*) optarg=`echo "$1" | sed 's/[-_a-zA-Z0-9]*=//'` ;;
