@@ -1,3 +1,8 @@
+Mon Nov 20 14:27:20 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Fix some warnings in net/socketclient.cc.  Remove an unneeded line
+	  in libomus-config.nodep.in.
+
 Mon Nov 20 14:22:40 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* postlist.h now declares class OmKey - was failing to declare before
